--- a/css/style.css
+++ b/css/style.css
@@ -742,6 +742,22 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.error-message {
+  margin: 0 !important;
+}
+
+#modal-container {
+  /* background-color: slategray; */
+  width: 100vh;
+  height: 100vh;
+  border-radius: 2%;
+  z-index: -1;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
