--- a/input.css
+++ b/input.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.error-message {
+  margin: 0 !important;
+}
+
+#modal-container {
+  /* background-color: slategray; */
+  width: 100vh;
+  height: 100vh;
+  border-radius: 2%;
+  z-index: -1;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+}
